# MemoryAnalysisTool

./: .clangd  CMakeLists.txt
cmake/: error_messages.cmake
src/: main.cpp
src/process/: pid_scanner.hpp  process_data.cpp  process_data.hpp  process_discovery.cpp  process_discovery.hpp  process_filter.hpp  process_inspector.hpp  process_monitor.cpp  process_monitor.hpp  process_tree.hpp  procfs_reader.hpp  types.hpp
src/scrapers/: base_scraper.hpp  kv_scraper.hpp  maps_scraper.hpp  scrapper_errors.hpp.in  smaps_scraper.hpp  statm_scraper.hpp
src/scrapers/models/: kv_registry.hpp  map_entry.hpp  smap_entry.hpp  statm_entry.hpp
src/sys_io/: fs_directory.cpp  fs_directory.hpp  fs_error.hpp.in  fs_fd.hpp  fs_reader.cpp  fs_reader.hpp
src/utils/: error_utils.hpp  logger.hpp  memory_types.hpp
